2017-02-18  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2017-02-15  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2017-02-14  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2017-02-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.9 released.

2017-02-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.8 released.

2017-02-12  Carl Hetherington  <cth@carlh.net>

	* Use CPL's annotation text for ASSETMAP and PKL (#1048).

	* Fix missing keys in VF KDMs (#975).

2017-02-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.7 released.

2017-02-06  Carl Hetherington  <cth@carlh.net>

	* Fix display of progress meter (and crash) when sending emails
	from the KDM creator (#1045).

2017-01-28  Carl Hetherington  <cth@carlh.net>

	* Add priority control buttons to batch converter (#961).

2017-01-18  Carl Hetherington  <cth@carlh.net>

	* Updated uk_UA translation from Igor Voytovich.

	* Updated ru_RU translation from Igor Voytovich.

2017-01-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.10.6 released.

2017-01-04  Carl Hetherington  <cth@carlh.net>

	* Fix non frame-aligned trims when using the to-playhead
	buttons.

2016-12-25  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-12-21  Carl Hetherington  <cth@carlh.net>

	* Add approximate finish time to progress on jobs (#927).

	* Version 2.10.5 released.

2016-12-21  Carl Hetherington  <cth@carlh.net>

	* Make "Add folder..." to accept a directory of WAV files (#942).

2016-12-19  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from Rov (若文).

	* Updated nl_NL translation from Rob van Nieuwkerk.

2016-12-16  Carl Hetherington  <cth@carlh.net>

	* Fix crash on opening properties dialogue (#1033).

	* Confirm overwrite of KDMs (#1008).

	* Add preference for default KDM target directory (#1013).
