@@ -1,3 +1,7 @@
+2017-02-20  Carl Hetherington  <cth@carlh.net>
+
+	* Add "Add DCP" button to the content panel.
+
 2017-02-18  Carl Hetherington  <cth@carlh.net>
 
 	* Updated fr_FR translation from Thierry Journet.
